--- a/question_app/templates/question_app/main.html
+++ b/question_app/templates/question_app/main.html
@@ -1,5 +1,12 @@
-<h1>You're in {{ user.get_username }}</h1>
+{% load static %}
+<link href="{% static 'question_app/style.css' %}" rel="stylesheet" type="text/css">
+<h1>Hello, {{ user.get_username }}</h1>
 <form action="{% url 'question:logout' %}" method="POST">
 {% csrf_token %}
     <input type="submit" value="Logout">
 </form>
+<div id="buttons">
+<a href="{% url 'question:questions'%}" id="button"> <div> Themes </div> </a>
+<a href="{% url 'question:questions'%}" id="button"> <div> Tests </div> </a>
+<a href="{% url 'question:questions'%}" id="button"> <div> Settings </div> </a>
+</div>
