--- a/question_app/static/question_app/style.css
+++ b/question_app/static/question_app/style.css
@@ -1,13 +1,5 @@
-* {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-}
-body {
-    background-color: #F2F2F2;
-}
-h1 {
-    font-size: 60px;
+main {
+    margin: 100px 0px 0px 100px;
 }
 #button > div {
     background-color: #009245;
