main,questioncreation and questions templates redesigned

--- a/question_app/templates/question_app/question_creation.html
+++ b/question_app/templates/question_app/question_creation.html
@@ -1,8 +1,11 @@
+{% load static %}
+<link href="{% static 'question_app/basic.css' %}" rel="stylesheet" type="text/css">
 <h1>Create your question</h1>
 <form action="{% url 'question:createquestion' theme_id %}" method="POST">
     {% csrf_token %}
     <label> question name </label>
     <input name="name" type="text">
+    <br>
     <label> answer </label>
     <textarea name="answer"> </textarea>
     <input type="submit">
