--- a/question_app/templates/question_app/main.html
+++ b/question_app/templates/question_app/main.html
@@ -8,8 +8,8 @@
         <input type="submit" value="Logout">
     </form>
     <div id="buttons">
-        <a href="{% url 'question:questions'%}" id="button"> <div> Themes </div> </a>
-        <a href="{% url 'question:questions'%}" id="button"> <div> Tests </div> </a>
-        <a href="{% url 'question:questions'%}" id="button"> <div> Settings </div> </a>
+        <a href="{% url 'question:themes' user.username %}" id="button"> <div> Themes </div> </a>
+        <a href="{% url 'question:tests' user.username %}" id="button"> <div> Tests </div> </a>
+        <a href="{% url 'question:themes' user.username %}" id="button"> <div> Settings </div> </a>
     </div>
 </main>
