--- a/question_app/templates/question_app/themes.html
+++ b/question_app/templates/question_app/themes.html
@@ -19,6 +19,9 @@
             <form action="{% url 'question:delete_theme' username=request.user.username theme_pk=theme.pk %}" method="POST">
                 {% csrf_token %}<input type="submit" value="delete"></form>
         </td>
+        <td>
+            <a href="{% url 'question:theme_edit' username=request.user.username theme_pk=theme.pk %}">edit</a>
+        </td>
         </tr>
     
     
