--- a/question_app/static/question_app/basic.css
+++ b/question_app/static/question_app/basic.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+    box-sizing: border-box;
 }
 body {
     background-color: #F2F2F2;
@@ -17,9 +18,45 @@ label{
 input{
     font-size: 36px;
 }
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
 table th{
     background-color: #009245;
+    color: white;
+    font-size: 1.2em;
+    font-style: normal;
 }
 #clickable:hover{
     background-color: #009245;
+}
+#invisible{
+    visibility: hidden;
+}
+.card{
+    margin: auto;
+    background-color: red;
+    width: 30%;
+    height: 25%;
+    border-radius: 10px;
+    position: relative;
+}
+.card>h2{
+    background-color: green;
+    border-radius: 10px 10px 0 0;
+    padding: 10px;
+}
+.card>p{
+    padding: 20px;
+}
+.first-child{
+    position: absolute;
+    top: 0;
+    right: 30px;
+}
+.card>a:last-child{
+    position: absolute;
+    top: 0;
+    right: 0;
 }
