--- a/question_app/templates/question_app/main.html
+++ b/question_app/templates/question_app/main.html
@@ -1,6 +1,7 @@
 {% load static %}
 <link href="{% static 'question_app/basic.css' %}" rel="stylesheet" type="text/css">
 <link href="{% static 'question_app/style.css' %}" rel="stylesheet" type="text/css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <main>
     <h1>Hello, {{ user.get_username }}</h1>
     <form action="{% url 'question:logout' %}" method="POST">
