--- a/question_app/static/question_app/basic.css
+++ b/question_app/static/question_app/basic.css
@@ -7,10 +7,6 @@
 body {
     background-color: #F2F2F2;
 }
-h1 {
-    font-size: 72px;
-    font-weight: bold;
-}
 label{
     font-size: 36px;
     font-weight: bold;
@@ -35,17 +31,19 @@ table th{
     visibility: hidden;
 }
 .card{
-    margin: auto;
-    background-color: red;
-    width: 30%;
-    height: 25%;
+    background-color: #dee5e5;
     border-radius: 10px;
     position: relative;
 }
 .card>h2{
-    background-color: green;
+    background-color:#119da4;
+    color: white;
     border-radius: 10px 10px 0 0;
     padding: 10px;
+}
+header{
+    background-color:#3066be;
+    color: white;
 }
 .card>p{
     padding: 20px;
