--- a/question_app/static/question_app/basic.css
+++ b/question_app/static/question_app/basic.css
@@ -5,14 +5,7 @@
     box-sizing: border-box;
 }
 body {
-    background-color: #F2F2F2;
-}
-label{
-    font-size: 36px;
-    font-weight: bold;
-}
-input{
-    font-size: 36px;
+    background-color: white;
 }
 table {
     border-collapse: collapse;
