--- a/question_app/static/question_app/layout.css
+++ b/question_app/static/question_app/layout.css
@@ -1,16 +1,69 @@
 header{
     width: 100%;
     height: 20%;
+    min-height: 2em;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
     position: relative;
 }
 h1 {
-    margin-left: 0.5em;
+    font-size: 1.7em;
+    text-align: center;
+    flex-shrink: 2em;
+}
+
+.form {
+    margin: auto;
+    width: 75%;
+    height: 100%;
+    font-size: 2em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+input {
+    font-size: inherit;
+    max-width: 100%;
+}
+input[type="submit"] {
+    background-color: #80ded9;
+    border: none;
+    padding: 10px;
+}
+a{
+    color: inherit;
+    text-decoration-line: none;
 }
 a:link:active, a:visited:active {
     color: white;
+}
+.list-box {
+    display: flex;
+    flex-direction: column;
+}
+.list-box>*{
+    display: block;
+    height: auto;
+    margin-bottom: 3%;
+}
+.button {
+    background-color:#3066be;
+    color: white;
+    width: 50%;
+    font-size: 2em;
+    text-align: center;
+}
+.rounded {
+    border-radius: 0.4em;
+}
+.center{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 80%;
+    min-height: 80vh;
 }
 .linear-down{
     display: flex;
