--- a/question_app/templates/question_app/question_creation.html
+++ b/question_app/templates/question_app/question_creation.html
@@ -1,7 +1,7 @@
 {% load static %}
 <link href="{% static 'question_app/basic.css' %}" rel="stylesheet" type="text/css">
 <h1>Create your question</h1>
-<form action="{% url 'question:create_question' request.user.username theme_pk %}" method="POST">
+<form action="{% url 'question:new_question' theme_pk %}" method="POST">
     {% csrf_token %}
     <label> question name </label>
     <input name="name" type="text">
