--- a/question_app/static/question_app/layout.css
+++ b/question_app/static/question_app/layout.css
@@ -1,8 +1,16 @@
+* {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    box-sizing: border-box;
+}
 header{
     width: 100%;
     height: 20%;
-    min-height: 2em;
-    display: flex;
+    min-height: 3em;
+    min-width: 10em;
+    background-color: red;
+    display: block;
     flex-direction: column;
     justify-content: center;
     position: relative;
@@ -12,17 +20,39 @@ h1 {
     text-align: center;
     flex-shrink: 2em;
 }
-
 .form {
     margin: auto;
-    width: 75%;
-    height: 100%;
-    font-size: 2em;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    width: 90%;
 }
-
+.form>*{
+    margin: 0.5em;
+    font-size: 1.5em;
+}
+.menu button{
+    position: absolute;
+    font-size: 1.2em;
+    right: 0.3em;
+    top: 0.3em;
+    background: none;
+    border: none;
+}
+.form>input[type="submit"]{
+    margin: auto;
+    width: 50%;
+    display: block;
+}
+.content{
+    width: 100%;
+    height: 80%;
+    min-height: 400px;
+    background-color: black;
+}
+.center{
+    display: flex;
+    min-height: 70vh;
+    flex-direction: column;
+    justify-content: center;
+}
 input {
     font-size: inherit;
     max-width: 100%;
@@ -39,49 +69,50 @@ a{
 a:link:active, a:visited:active {
     color: white;
 }
-.list-box {
-    display: flex;
-    flex-direction: column;
-}
-.list-box>*{
-    display: block;
-    height: auto;
-    margin-bottom: 3%;
-}
+
 .button {
-    background-color:#3066be;
+    background-color:#EB9605;
     color: white;
-    width: 50%;
+    width: 70%;
     font-size: 2em;
+    border-radius: 1em;
     text-align: center;
+    flex: 0 0 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.disabled {
+    opacity: 0.5;
+}
+.disabled {
+    cursor: default;
+}
+
+.button:hover{
+    background-color: #EB9615;
+}
+.disabled:hover{
+    background-color: #EB9605;
+    opacity: 0.5;
 }
 .rounded {
     border-radius: 0.4em;
 }
-.center{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 80%;
-    min-height: 80vh;
+.box{
+    height: 100%;
+    display: -webkit-flex;
 }
-.linear-down{
-    display: flex;
+.vertical{
     flex-direction: column;
     justify-content: space-around;
 }
-.linear-down>div{
-    margin: 10px auto;
-    width: 80vw;
-    font-size: 1em;
-}
-.linear-down::after{
-    content: "";
-    height: 5em;
+.vertical>*{
+    margin: auto;
 }
 i{
     font-size: 2em;
-    color:#80ded9;
+    color: #F9A602;
 }
 .back{
     position: absolute;
