--- a/question_app/templates/question_app/index.html
+++ b/question_app/templates/question_app/index.html
@@ -1,2 +1,3 @@
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <h1>Welcome</h1>
 <a href="{% url 'accounts:login' %}">Log in</a>
