Home page connected to / path

--- a/src/main/templates/main/home.html
+++ b/src/main/templates/main/home.html
@@ -1,6 +1,11 @@
 {% extends 'main/base.html' %}
 {% block body %}
 <div class="row">
+	<div class="col-12">
+		<h1>My Question Bank</h1>
+	</div>
+</div>
+<div class="row">
 	<div class="col-12 col-md-4">
 		<h2> What is myquestionbank? </h2>
 		<p>
