--- a/src/main/templates/main/base.html
+++ b/src/main/templates/main/base.html
@@ -12,13 +12,28 @@
     <title>MyQuestionBank</title>
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-		<a class="navbar-brand" href="#"> MyQuestionBank </a>
-	</nav>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary justify-content-between">
+        <a class="navbar-brand" href="#">MyQuestionBank</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#content">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div id="content" class="collapse navbar-collapse justify-content-between">
+            <ul class="navbar-nav justify-content-end">
+                {# TODO #}
+                {% comment "todo" %}
+                    The nav items will be filled when the home page gets more content
+                {% endcomment %}
+            </ul>
+            <form class="form-inline">
+                <button class="btn btn-success mr-2">Signup</button>
+                <button class="btn btn-secondary">Login</button>
+            </form>
+        </div>
+    </nav>
 	<div class="container-fluid">
 	    {% block body %}
 	    {% endblock %}
-	</div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>    
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
