--- a/src/main/templates/main/base.html
+++ b/src/main/templates/main/base.html
@@ -18,15 +18,21 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div id="content" class="collapse navbar-collapse justify-content-between">
-            <ul class="navbar-nav justify-content-end">
+            <ul class="navbar-nav">
                 {# TODO #}
                 {% comment "todo" %}
                     The nav items will be filled when the home page gets more content
                 {% endcomment %}
             </ul>
             <form class="form-inline">
-                <button class="btn btn-success mr-2">Signup</button>
-                <button class="btn btn-secondary">Login</button>
+                {% if not request.user.is_authenticated %}
+                    <a class="btn btn-success mr-2" href="{% url 'accounts:signup' %}">Signup</a>
+                    <a class="btn btn-secondary" href="{% url 'accounts:login' %}">Login</a>
+                {% elif request.path == '/app/' %}
+                    <a class="btn btn-success" href="{% url 'accounts:logout' %}">Logout</a>
+                {% else %}
+                    <a class="btn btn-success" href="{% url 'question:index' %}">Go to Dashboard</a>
+                {% endif %}
             </form>
         </div>
     </nav>
