--- a/src/accounts/templates/accounts/login.html
+++ b/src/accounts/templates/accounts/login.html
@@ -1,28 +1,35 @@
-{% load static %}
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="{%static 'question_app/layout.css'%}">
-<link rel="stylesheet" href="{%static 'question_app/basic.css' %}">
-
-    <header>
-        <h1>Login to MyQuestionApp</h1>
+{% extends 'main/base.html' %}
+{% block body %}
+<div>
+    <header class="row justify-content-center mb-2">
+        <h1 class="mw-75 text-center">Login</h1>
     </header>
-    {% if request.GET.login %}
-        <p> Your username or password is not correct </p>
-    {% endif %}
-    <div class="center">
-        <form class="form" action="{% url 'accounts:login' %}" method="post">
+    <div class="row justify-content-center">
+        <form class="mw-75" method="POST">
             {% csrf_token %}
             {% if request.GET.next %}
-                <input type="hidden" name="path" value="{{ request.GET.next }}">
+            <input type="hidden" name="path" value="{{ request.GET.next }}">
             {% endif %}
-                <div class="field">
-                    <label>Username:</label>
-                    <input type="text" name="username" size="150">
+            <div class="form-group form-row">
+                <div class="col-12">
+                    <label for="username" class="col-form-label">Username:</label>
                 </div>
-                <div class="field">
-                    <label>Password:</label>
-                    <input type="password" name="password" size="150">
+                <div class="col-12">
+                    <input id="username" class="form-control" type="text" name="username" />
                 </div>
-                <input type="submit" value="Login">
+            </div>
+            <div class="form-group form-row">
+                <div class="col-12">
+                    <label class="col-form-label">Password:</label>
+                </div>
+                <div class="col-12">
+                    <input class="form-control" type="password" name="password">
+                </div>
+            </div>
+            <div class="form-group form-row justify-content-center">
+                <input class="btn btn-primary w-75" type="submit" value="Login">
+            </div>
         </form>
     </div>
+</div>
+{% endblock %}
