--- a/src/main/templates/main/base.html
+++ b/src/main/templates/main/base.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{% static 'bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'extra.css' %}">
     <!--
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     -->
     <title>MyQuestionBank</title>
 </head>
 <body>
+    <div class="mb-3">
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary justify-content-between">
         <a class="navbar-brand" href="#">MyQuestionBank</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#content">
@@ -36,6 +38,12 @@
             </form>
         </div>
     </nav>
+    {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}" role="alert">
+            {{ message }}
+        </div>
+    {% endfor %}
+    </div>
 	<div class="container-fluid">
 	    {% block body %}
 	    {% endblock %}
