--- a/src/accounts/templates/accounts/login.html
+++ b/src/accounts/templates/accounts/login.html
@@ -4,7 +4,7 @@
     <header class="row justify-content-center mb-2">
         <h1 class="mw-75 text-center">Login</h1>
     </header>
-    <div class="row justify-content-center">
+    <div class="row justify-content-center mb-2">
         <form class="mw-75" method="POST">
             {% csrf_token %}
             {% if request.GET.next %}
