--- a/src/main/templates/main/base.html
+++ b/src/main/templates/main/base.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="{% static 'bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'extra.css' %}">
+    <link rel="stylesheet" href="{% static 'bootstrap.css' %}"/>
+    <link rel="stylesheet" href="{% static 'extra.css' %}"/>
     <!--
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     -->
@@ -26,16 +26,19 @@
                     The nav items will be filled when the home page gets more content
                 {% endcomment %}
             </ul>
-            <form class="form-inline">
+            <div class="form-inline">
                 {% if not request.user.is_authenticated %}
                     <a class="btn btn-success mr-2" href="{% url 'accounts:signup' %}">Signup</a>
                     <a class="btn btn-secondary" href="{% url 'accounts:login' %}">Login</a>
                 {% elif request.path == '/app/' %}
-                    <a class="btn btn-success" href="{% url 'accounts:logout' %}">Logout</a>
+                <form method="POST" action="{% url 'accounts:logout' %}">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-success" href="{% url 'accounts:logout' %}">Logout</button>
+                </form>
                 {% else %}
                     <a class="btn btn-success" href="{% url 'question:index' %}">Go to Dashboard</a>
                 {% endif %}
-            </form>
+            </div>
         </div>
     </nav>
     {% for message in messages %}
