--- a/src/main/static/extra.css
+++ b/src/main/static/extra.css
@@ -1,6 +1,10 @@
 .mw-75{
     max-width: 20em;
 }
+.mw-80{
+    max-width: 30em;
+    width: 40em;
+}
 .shadowed{
     box-shadow: 0.1em 0.1em 1em gray;
 }
