--- a/src/main/templates/main/base.html
+++ b/src/main/templates/main/base.html
@@ -30,13 +30,12 @@
                 {% if not request.user.is_authenticated %}
                     <a class="btn btn-success mr-2" href="{% url 'accounts:signup' %}">Signup</a>
                     <a class="btn btn-secondary" href="{% url 'accounts:login' %}">Login</a>
-                {% elif request.path == '/app/' %}
+                {% else %}
+                <a class="mr-2 btn btn-success" href="{% url 'question:main' %}">Go to App</a>
                 <form method="POST" action="{% url 'accounts:logout' %}">
                     {% csrf_token %}
-                    <button type="submit" class="btn btn-success" href="{% url 'accounts:logout' %}">Logout</button>
+                    <button type="submit" class="btn btn-danger" href="{% url 'accounts:logout' %}">Logout</button>
                 </form>
-                {% else %}
-                    <a class="btn btn-success" href="{% url 'question:index' %}">Go to Dashboard</a>
                 {% endif %}
             </div>
         </div>
