--- a/src/question_app/templates/question_app/theme.html
+++ b/src/question_app/templates/question_app/theme.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <header>
-    <a href="{% url 'question:themes' %}"> <i class="back fas fa-arrow-circle-left"></i> </a>
+    <a href="{% url 'question:main' %}"> <i class="back fas fa-arrow-circle-left"></i> </a>
     <h1> {{ theme.theme_name }}'s cards</h1>
 </header>
 <div class="cellphone-button">
