--- a/src/question_app/templates/question_app/theme_create.html
+++ b/src/question_app/templates/question_app/theme_create.html
@@ -1,21 +1,25 @@
 {% extends 'main/base.html' %}
 {% block body %}
 <header class="row justify-content-center mb-2">
-    <h1 class="text-center mw-75">Create your theme</h1>
+    <h1 class="text-center mw-75">
+        Your theme:
+    </h1>
 </header>
 <div class="row justify-content-center mb-2">
     <form class="mw-75" method="POST">
         {% csrf_token %}
         <div class="form-group form-row">
             <label for="id_name"> Theme name: </label>
-            <input class="form-control" id="id_name" name="name" type="text">
+            <input class="form-control" id="id_name" name="name" type="text" value="{{ theme.theme_name }}">
         </div>
         <div class="form-group form-row">
             <label for="id_name"> Description: </label>
-            <textarea class="form-control" name="description"> </textarea>
+            <textarea class="form-control" name="description" cols="20">
+                {{ theme.theme_description }}
+            </textarea>
         </div>
         <div class="form-group form-row justify-content-center">
-            <input class="btn btn-success w-75" type="submit" value="Create Theme">
+            <input class="btn btn-success w-75" type="submit" value="Save Theme">
         </div>
     </form>
 </div>
