--- a/src/accounts/templates/accounts/signup.html
+++ b/src/accounts/templates/accounts/signup.html
@@ -5,61 +5,101 @@
         <h1 class="mw-75 text-center">Signup</h1>
     </header>
     <div class="row justify-content-center">
-        <form class="needs-validation mw-75" method="POST" novalidate>
+        <form method="POST">
             {% csrf_token %}
             <div class="form-group form-row">
-                <div class="col-12">
+                <div class="col-12 col-md-3 col-form-label">
                     {{ form.email.label_tag }}
                 </div>
-                <div class="col-12">
-                    <input id="id_email" class="form-control col-12" name="email" type="email"
+                <div class="col-12 col-md-9">
+                    <input id="id_email" class="form-control col-12 
+                    {% if form.email.errors %}
+                        is-invalid
+                    {% endif%}
+                    " name="email" type="email"
                         value="{{ form.email.value|default:'' }}" />
-                </div>
-                <div class="">
-                    {{ form.email.errors }}
+                    <div class="invalid-feedback">
+                        {{ form.email.errors }}
+                    </div>
                 </div>
             </div>
             <div class="form-group form-row">
-                {{ form.username.label_tag }}
-                <input class="form-control" name="username" type="text" value="{{ form.username.value|default:'' }}"
-                    aria-describedby="usernamehelp" />
-                <div class="invalid-feedback">
-                    {{ form.username.errors }}
+                <div class="col-12 col-md-3 col-form-label">
+                    {{ form.username.label_tag }}
                 </div>
-                <small id="usernamehelp" class="form-text text-muted">
-                    {{ form.username.help_text }}
-                </small>
+                <div class="col-12 col-md-9">
+                    <input class="form-control 
+                    {% if form.username.errors %}
+                        is-invalid
+                    {% endif %}
+                    " name="username" type="text" value="{{ form.username.value|default:'' }}"
+                    aria-describedby="usernamehelp">
+                    <small id="usernamehelp" class="form-text text-muted">
+                        {{ form.username.help_text }}
+                    </small>
+                    <div class="invalid-feedback">
+                        {{ form.username.errors }}
+                    </div>
+                </div>
             </div>
             <div class="form-group form-row">
+                <div class="col-12 col-md-3">
                 {{ form.role.label_tag }}
-                {{ form.role }}
+                </div>
+                <div class="col-12 col-md-9">
+                <select class="form-control 
+                {% if form.role.errors %}
+                    is-invalid
+                {% endif %}
+                " name="{{ form.role.html_name }}">
+                    {% for value,display in form.role.field.choices %}
+                    <option value="{{ value }}">{{ display }}</option>
+                    {% endfor %}
+                </select>
                 <small>
                     {{ form.role.help_text }}
                 </small>
                 <div class="invalid-feedback">
                     {{ form.role.errors }}
                 </div>
+                </div> 
             </div>
             <div class="form-group form-row">
-                {{ form.password1.label_tag }}
-                <input class="form-control" name="password1" type="password"
-                    value="{{ form.password1.value|default:'' }}" aria-describedby="password1help">
-                <small id="password1help" class="form-text text-muted">
-                    {{ form.password1.help_text }}
-                </small>
-                <div class="invalid-feedback">
-                    {{ form.password1.errors }}
+                <div class="col-12 col-md-3">
+                    {{ form.password1.label_tag }}
+                </div>
+                <div class="col-12 col-md-9">
+                    <input class="form-control 
+                    {% if form.password1.errors %}
+                        is-invalid
+                    {% endif %}
+                    " name="password1" type="password"
+                        value="{{ form.password1.value|default:'' }}" aria-describedby="password1help">
+                    <small id="password1help" class="form-text text-muted">
+                        {{ form.password1.help_text }}
+                    </small>
+                    <div class="invalid-feedback">
+                        {{ form.password1.errors }}
+                    </div>
                 </div>
             </div>
             <div class="form-group form-row">
-                {{ form.password2.label_tag }}
-                <input class="form-control" name="password2" type="password"
-                    value="{{ form.password2.value|default:'' }}" aria-describedby="password2help">
-                <small id="password2help" class="form-text text-muted">
-                    {{ form.password2.help_text }}
-                </small>
-                <div class="invalid-feedback">
-                    {{ form.password2.errors }}
+                <div class="col-12 col-md-3">
+                    {{ form.password2.label_tag }}
+                </div>
+                <div class="col-12 col-md-9">
+                    <input class="form-control 
+                    {% if form.password2.errors %}
+                        is-invalid
+                    {% endif %}
+                    " name="password2" type="password"
+                        value="{{ form.password2.value|default:'' }}" aria-describedby="password2help">
+                    <small id="password2help" class="form-text text-muted">
+                        {{ form.password2.help_text }}
+                    </small>
+                    <div class="invalid-feedback">
+                        {{ form.password2.errors }}
+                    </div>
                 </div>
             </div>
             <div class="form-group form-row justify-content-center">
