--- a/src/main/templates/main/base.html
+++ b/src/main/templates/main/base.html
@@ -5,15 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="{% static 'bootstrap.css' %}"/>
-    <link rel="stylesheet" href="{% static 'extra.css' %}"/>
-    <!--
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    -->
     <title>MyQuestionBank</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
 <body>
-    <div class="mb-3">
+<div class="mb-3">
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary justify-content-between">
         <a class="navbar-brand" href="#">MyQuestionBank</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#content">
@@ -23,13 +20,13 @@
             <ul class="navbar-nav">
                 {# TODO #}
                 {% comment "todo" %}
-                    The nav items will be filled when the home page gets more content
+                The nav items will be filled when the home page gets more content
                 {% endcomment %}
             </ul>
             <div class="form-inline">
                 {% if not request.user.is_authenticated %}
-                    <a class="btn btn-success mr-2" href="{% url 'accounts:signup' %}">Signup</a>
-                    <a class="btn btn-secondary" href="{% url 'accounts:login' %}">Login</a>
+                <a class="btn btn-success mr-2" href="{% url 'accounts:signup' %}">Signup</a>
+                <a class="btn btn-secondary" href="{% url 'accounts:login' %}">Login</a>
                 {% else %}
                 <a class="mr-2 btn btn-success" href="{% url 'question:main' %}">Go to App</a>
                 <form method="POST" action="{% url 'accounts:logout' %}">
@@ -41,17 +38,18 @@
         </div>
     </nav>
     {% for message in messages %}
-        <div class="alert alert-{{ message.tags }}" role="alert">
-            {{ message }}
-        </div>
+    <div class="alert alert-{{ message.tags }}" role="alert">
+        {{ message }}
+    </div>
     {% endfor %}
-    </div>
-	<div class="container-fluid">
-	    {% block body %}
-	    {% endblock %}
-    </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>    
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+</div>
+<div class="container-fluid">
+    {% block body %}
+    {% endblock %}
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
+
 </body>
 </html>
