--- a/src/question_app/templates/question_app/main.html
+++ b/src/question_app/templates/question_app/main.html
@@ -2,56 +2,38 @@
 {% block body %}
 <h1> Welcome, {{ request.user.username }} </h1>
 <ul class="nav">
-	<li class="nav-item">
-		<a href="#" class="nav-link disabled"> Tests </a>
-	</li>
-	<li class="nav-item">
-		<a href="#" class="nav-link disabled"> Settings </a>
-	</li>
+    <li class="nav-item">
+        <a href="#" class="nav-link disabled"> Tests </a>
+    </li>
+    <li class="nav-item">
+        <a href="#" class="nav-link disabled"> Settings </a>
+    </li>
 </ul>
 <hr>
 <h2> Your themes: </h2>
-
-
-<table class="table table-sm table-striped">
-	<tr class="table-primary">
-		<th colspan="2">
-			Your themes
-		</th>
-		<th colspan="2">
-			<div class="d-flex justify-content-center">
-				<a class="btn btn-success" href="{% url 'question:create_theme' %}"> add theme </a>
-			</div>
-		</th>
-	</tr>
-	{% for theme in themes %}
-	<tr>
-		<td>
-			<a href="{% url 'question:detail_theme' theme.id %}">
-				{{ theme.theme_name }}
-			</a>
-		</td>
-		<td>
-			{{ theme.theme_description }}
-		</td>
-		<td>
-			<div class="d-flex justify-content-center">
-				<a class="btn btn-primary btn-sm" href="{% url 'question:edit_theme' theme.pk %}">
-					Edit
-				</a>
-			</div>
-		</td>
-		<td>
-			<div class="d-flex justify-content-center">
-				<form action="{% url 'question:delete_theme'  theme.pk %}" method="POST">
-					{% csrf_token %}
-					<input class="btn btn-danger btn-sm" type="submit" value="delete">
-				</form>
-			</div>
-		</td>
-	</tr>
-	{% empty %}
-</table>
-<p> You don't have themes </p>
-{% endfor %}
+<a href="{% url 'question:create_theme' %}">Create</a>
+<div class="list-group">
+    {% for theme in themes %}
+    <div class="list-group-item d-flex justify-content-between align-items-start">
+        <div class="d-flex flex-column">
+            <p class="fw-bold mb-1">
+                {{ theme.theme_name }}
+            </p>
+            <p>
+                {{ theme.theme_description }}
+            </p>
+        </div>
+        <div class="d-flex">
+            <a class="btn btn-link" href="{% url 'question:edit_theme' theme.pk %}">
+                <i class="fs-4 bi bi-pencil"></i>
+            </a>
+            <form action="{% url 'question:delete_theme' theme.pk %}">
+                <button type="submit" class="btn btn-link link-danger">
+                    <i class="fs-4 bi bi-x-circle"></i>
+                </button>
+            </form>
+        </div>
+    </div>
+    {% endfor %}
+</div>
 {% endblock %}
