--- a/src/main/templates/main/base.html
+++ b/src/main/templates/main/base.html
@@ -1,5 +1,5 @@
-{% load static %}
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,39 +8,53 @@
     <title>MyQuestionBank</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
 </head>
 <body>
 <div class="mb-3">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary justify-content-between">
-        <a class="navbar-brand" href="#">MyQuestionBank</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#content">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div id="content" class="collapse navbar-collapse justify-content-between">
-            <ul class="navbar-nav">
-                {# TODO #}
-                {% comment "todo" %}
-                The nav items will be filled when the home page gets more content
-                {% endcomment %}
-            </ul>
-            <div class="form-inline">
-                {% if not request.user.is_authenticated %}
-                <a class="btn btn-success mr-2" href="{% url 'accounts:signup' %}">Signup</a>
-                <a class="btn btn-secondary" href="{% url 'accounts:login' %}">Login</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-between">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">MyQuestionBank</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div id="navbar" class="collapse navbar-collapse">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active">Themes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link">Questions</a>
+                    </li>
+                    <li>
+                        <a class="nav-link">Tests</a>
+                    </li>
+                </ul>
+                {% if not user.is_authenticated %}
+                    <a class="btn btn-outline-primary mx-1"
+                       href="{% url 'accounts:signup' %}">Signup</a>
+                    <a class="btn btn-primary mx-1" href="{% url 'accounts:login' %}">Login</a>
                 {% else %}
-                <a class="mr-2 btn btn-success" href="{% url 'question:main' %}">Go to App</a>
-                <form method="POST" action="{% url 'accounts:logout' %}">
-                    {% csrf_token %}
-                    <button type="submit" class="btn btn-danger" href="{% url 'accounts:logout' %}">Logout</button>
-                </form>
+                    <div class="navbar-nav">
+                        <div class="nav-item">
+                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
+                               aria-expanded="false">
+                                {{ user.username }}
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-end">
+                                <li><a class="dropdown-item" href="#">See Profile</a></li>
+                                <li><a class="dropdown-item" href="{% url 'accounts:logout' %}">Logout</a></li>
+                            </ul>
+                        </div>
+                    </div>
                 {% endif %}
             </div>
         </div>
     </nav>
     {% for message in messages %}
-    <div class="alert alert-{{ message.tags }}" role="alert">
-        {{ message }}
-    </div>
+        <div class="alert alert-{{ message.tags }}" role="alert">
+            {{ message }}
+        </div>
     {% endfor %}
 </div>
 <div class="container-fluid">
